fixing horizontal scroll (forgot to commit this bit yesterday)

--- a/site/css/rabbit.css
+++ b/site/css/rabbit.css
@@ -2,7 +2,7 @@
 /* a9b5af - 150 7 71 */
 /* old visited color: #c40; */
 html {
-overflow-x:hidden;
+overflow-x:auto;
 overflow-y:scroll;
 }
 
